syntax = "proto3";

package golem.component;

message LinearMemory {
  uint64 initial = 1;
  optional uint64 maximum = 2;
}
